<resources>
    <string name="app_name">Visiting Card</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="slider_button_text">Let\'s Go</string>
    <string name="tv_license"> LICENSE</string>
    <string name="tv_contributors">CONTRIBUTORS</string>
    <string name="tv_contactus">CONTACT US</string>
    <string name="tv_opensource">OPEN SOURCE</string>
    <string name="tv_libraries">LIBRARIES</string>
    <string name="jboss_title">JBoss Outreach</string>
</resources>